chore: upgrade to Java 17
Migrated project from Java 8 to Java 17 using Moderne CLI with OpenRewrite recipes.

- Updated Maven compiler plugin to 3.14.1 with Java 17 release target
- Upgraded Mockito from 1.10.19 (mockito-all) to 3.12.4 (mockito-core)
- Modernized code patterns: Paths.get() to Path.of(), String.format() to String.formatted()
- Fixed file ordering in directory listing for consistent behavior across Java versions

Co-authored-by: Ona <no-reply@ona.com>