@@ -1,6 +1,6 @@
 package eu.rekawek.jhttp.server;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import org.junit.Test;
 
@@ -10,7 +10,7 @@ public class PathResolverTest {
 
     @Test
     public void testPathResolver() {
-        final PathResolver resolver = new PathResolver(Paths.get("/server/root"));
+        final PathResolver resolver = new PathResolver(Path.of("/server/root"));
         assertEquals("/server/root", resolver.resolveFile("/").toString());
         assertEquals("/server/root", resolver.resolveFile("").toString());
         assertEquals("/server/root/path", resolver.resolveFile("/path").toString());
